2009-07-23  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed ChangeLog

2009-03-14  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.6 Minimal.

2009-02-17  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.5 Minimal.

2009-02-02  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.4 Minimal.

2009-01-21  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.3 Minimal.

2009-01-14  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Added two options "Add include path" and "Register autoloader". Marked extension as stable.

2009-01-10  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.2 Minimal.

2008-12-03  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.1 Minimal.

2008-11-25  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.7.0 Minimal.

2008-10-15  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.6.2 Minimal.

2008-09-22  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.6.1 Minimal.

2008-09-05  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.6.0 Minimal

2008-09-02  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Added german documentation. Changed version number to the same like Zend Framework, optimized adding include path

2008-07-30  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Zend Framework 1.5.3, small changes, code optimization

2008-07-28  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Integrated new Zend Framework version 1.5.3

2008-07-24  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Small changes, added README.txt, nothing special

2008-07-03  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>

	* Initial release