@@ -1,6 +1,7 @@
 2009-07-23  Oliver Hader  <oliver@typo3.org>
 
 	* Cleanup: Fixed ChangeLog
+	* Cleanup: Moved extension initialization to separate class tx_zendframework
 
 2009-03-14  Zephir AG, www.zephir.ch  <thomas.breuss@zephir.ch>
 
